--- a/public/modules/contact/contact.html
+++ b/public/modules/contact/contact.html
@@ -10,17 +10,17 @@
         <label for="lname_input">Last Name</label>
     </div>
     <div class="input-field col s12">
-        <i class="material-icons prefix">phone</i>
+        <i class="material-icons prefix">today</i>
         <input id="born_input" type="date" class="validate" ng-model="contact.born">
         <label for="born_input">Born</label>
     </div>
     <div class="input-field col s12">
-        <i class="material-icons prefix">email</i>
+        <i class="material-icons prefix">tag_faces</i>
         <input id="nick_input" type="text" class="validate" ng-model="contact.nick">
         <label for="nick_input">Nick</label>
     </div>
     <div class="input-field col s12">
-        <i class="material-icons prefix">email</i>
+        <i class="material-icons prefix">wc</i>
         <input id="sex_input" type="text" class="validate" ng-model="contact.sex">
         <label for="sex_input">Gender</label>
     </div>
