--- a/public/modules/results/results.html
+++ b/public/modules/results/results.html
@@ -7,7 +7,7 @@
 <ul class="collection">
     <li class="collection-item avatar" ng-repeat="contact in results | orderBy: 'fname' | filterBy: ['fname', 'lname']: searchText">
 		<img ng-src="pix/{{contact.pix}}" onerror="this.src='pix/naPhoto.gif'" alt="person photo" class="circle" title='{{contact.cdate | date}} &Delta; {{contact.mdate | date}}'/>
-		<b class="title" ng-class="{'male-color': contact.sex.toUpperCase() == 'M', 'female-color': contact.sex.toUpperCase() == 'F'}">{{contact.fname}} {{contact.lname}}<i ng-if='contact.nick'> &raquo; {{contact.nick}}</i></b>
+		<b class="title" ng-class="{'male-color': contact.sex.toUpperCase() == 'M', 'female-color': contact.sex.toUpperCase() == 'F'}">{{contact.fname}} {{contact.lname}}<i ng-if='contact.nick'> &raquo; {{contact.nick}}</i></b> <a href='https://www.linkedin.com/vsearch/f?keywords={{contact.fname.substr(0,contact.fname.indexOf(" "))}}+{{contact.lname}}&search=Search' target='_blank'><img src='pix/icons/linkedin.gif'/></a>
 		<div>{{contact.born | bornFilter}}
 		<i ng-if='contact.tags'><div class='mg-tag' ng-repeat="tag in contact.tags.split(';')">{{tag}}</div></i></div>
 		<a ng-href="#/contact/{{contact.id}}" class="secondary-content"><i class="material-icons">chevron_right</i></a>
