--- a/public/modules/detail/detail.htm
+++ b/public/modules/detail/detail.htm
@@ -1,15 +1,8 @@
-<div class="input-field search-bar">
-    <div class="row">
-    <table><tr><td style='padding: 0'><i class="material-icons prefix">search</i><div style='margin-top: 28px'>{{(results | filterBy: ['fname', 'lname']: searchText).length}}/{{results.length}}</div></td>
-    <td style='padding: 0'><input id="icon_prefix" type="text" placeholder="Search" ng-model="searchText"></td></tr><table>
-    </div>
-</div>
 <ul class="media-list">
-    <li class="media" ng-repeat="contact in results | orderBy: 'fname' | filterBy: ['fname', 'lname']: searchText">
+    <li class="media">
 		<div class="media-left"><img ng-src="pix/{{contact.pix}}" class="media-object" onerror="this.src='pix/naPhoto.gif'" alt="person photo" title='{{contact.cdate | date}} &Delta; {{contact.mdate | date}}'/></div>
 		<div class="media-body"><b class="title" ng-class="{'male-color': contact.sex.toUpperCase() == 'M', 'female-color': contact.sex.toUpperCase() == 'F'}">{{contact.fname}} {{contact.lname}}<i ng-if='contact.nick'> &raquo; {{contact.nick}}</i></b> <a href='https://www.linkedin.com/vsearch/f?keywords={{contact.fname.substr(0,contact.fname.indexOf(" "))}}+{{contact.lname}}&search=Search' target='_blank'><img src='pix/icons/linkedin.gif'/></a>
 		<div>{{contact.born | bornFilter}}
 		<i ng-if='contact.tags'><div class='mg-tag' ng-repeat="tag in contact.tags.split(';')">{{tag}}</div></i></div>
-		<a ng-href="#/detail/{{contact.id}}" class="secondary-content"><i class="material-icons">chevron_right</i></a></div>
     </li>
 </ul>
