Alerts Alerts, Get Better Alerts!
Handle errors appropriately in angular controllers.
Styling alerts to be more compact.
Remove nasty SQL error alerting from results page.
Fixing timeout bug and documentation error in alertService.
Upgraded dbQueries deprecated functions.

--- a/public/modules/detail/detail.htm
+++ b/public/modules/detail/detail.htm
@@ -1,4 +1,4 @@
-<ul class="media-list">
+<ul class="media-list" ng-if="contact">
     <li class="media">
 		<div class="media-left">
 			<img ng-src="pix/{{contact.pix}}" class="media-object" onerror="this.src='pix/naPhoto.gif'" alt="person photo" title='{{contact.cdate | date}} &Delta; {{contact.mdate | date}}'/>
