--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="active"<a href="#/results"><i class="fa fa-users"></i> <span>Recent</span></a></li>
-                <li><a href="#/results/favorites"><i class="fa fa-star"></i> <span>Favorites</span></a></li>
-                <li><a href="#/imports"><i class="fa fa-download"></i> <span>Import</span></a></li>
-                <li><a href="#/events"><i class="fa fa-tasks"></i> <span>Events</span></a></li>
-                <li><a href="#/tools"><i class="fa fa-cog"></i> <span>Tools</span></a></li>
-                <li><a href="#/about"><i class="fa fa-info"></i> <span>About</span></a></li>
+                <li class="active"><a href="#!/results"><i class="fa fa-users"></i> <span>Recent</span></a></li>
+                <li><a href="#!/results/favorites"><i class="fa fa-star"></i> <span>Favorites</span></a></li>
+                <li><a href="#!/imports"><i class="fa fa-download"></i> <span>Import</span></a></li>
+                <li><a href="#!/events"><i class="fa fa-tasks"></i> <span>Events</span></a></li>
+                <li><a href="#!/tools"><i class="fa fa-cog"></i> <span>Tools</span></a></li>
+                <li><a href="#!/about"><i class="fa fa-info"></i> <span>About</span></a></li>
                 <li class="treeview">
                     <a href=""><i class="fa fa-link"></i> <span>Views</span>
                         <span class="pull-right-container">
@@ -82,8 +82,8 @@
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="#">Tag</a></li>
-                        <li><a href="#">Organization</a></li>
+                        <li><a href="#!">Tag</a></li>
+                        <li><a href="#!">Organization</a></li>
                     </ul>
                 </li>
             </ul>
