--- a/modules/results/results.html
+++ b/modules/results/results.html
@@ -9,7 +9,7 @@
 <ul class="media-list">
     <li class="media" ng-repeat="contact in results | orderBy: 'fname' | filterBy: ['fname', 'lname']: searchText">
 		<div class="media-left">
-            <a ng-href="#/detail/{{contact.id}}">
+            <a ng-href="#!/detail/{{contact.id}}">
                 <contact-image contact="contact"></contact-image>
             </a>
         </div>
