--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
 
-        <div alert-box></div>
+        <alert-box></alert-box>
 
         <section class="content">
             <div ng-view><!-- Injected with AngularJS --></div>
