--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
 
-        <div alert-box></div>
+        <alert-box></alert-box>
 
         <section class="content">
             <div ng-view><!-- Injected with AngularJS --></div>
@@ -137,6 +137,7 @@
     <script src="services/alertService.js"></script>
     <script src="services/queryService.js"></script>
     <script src="services/loginService.js"></script>
+    <script src="services/jwtService.js"></script>
     <!-- Angular Filters Module -->
     <script src="filters/filters.js"></script>
     <!-- Angular Directives Module -->
