--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
             <!-- Sidebar Menu -->
             <form class="sidebar-form">
                 <div class="input-group">
-                    <input type="text" class="form-control" ng-class="{'searchError': nc.customSearchError}" ng-change="nc.customSearchError=false" placeholder="Search..." spellcheck="false" ng-model="customSearchCriteria">
+                    <input type="text" class="form-control" ng-class="{'searchError': nc.customSearchError}" ng-change="nc.customSearchError=false" placeholder="Search..." spellcheck="false" ng-model="customSearchCriteria" title='note: org: rel[ation]: info: ginfo: email: url: last: first: ph: sp[ouse]: st[ate]: city: tag: str[eet]:'/>
                     <span class="input-group-btn">
                         <button type="submit" name="search" id="search-btn" class="btn btn-flat" onclick="return false;" ng-click="customSearch()">
                             <i class="fa fa-search"></i>
@@ -70,12 +70,13 @@
 
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="active"><a href="#!/results"><i class="fa fa-users"></i> <span>Recent</span></a></li>
+                <li class="active"><a href="#!/results/recent-adds"><i class="fa fa-users"></i> Recent Adds</a></li>
+                <li><a href="#!/results/recent-mods"><i class="fa fa-users"></i> Recent Mods</a></li>
                 <li><a href="#!/results/favorites"><i class="fa fa-star"></i> <span>Favorites</span></a></li>
-                <li><a href="#!/imports"><i class="fa fa-download"></i> <span>Import</span></a></li>
+                <li><a href='#!/import'><i class='fa fa-download'></i> Import</a></li>
                 <li><a href="#!/events"><i class="fa fa-tasks"></i> <span>Events</span></a></li>
                 <li><a href="#!/tools"><i class="fa fa-cog"></i> <span>Tools</span></a></li>
-                <li><a href='#!/about'><i class="fa fa-info"></i> About</a></li>
+                <li><a href='#!/about'><i class='fa fa-info'></i> About</a></li>
                 <li class="treeview">
                     <a href=""><i class="fa fa-link"></i> <span>Views</span>
                         <span class="pull-right-container">
