modified tool text

--- a/modules/tools/tools.html
+++ b/modules/tools/tools.html
@@ -1,3 +1,11 @@
+<h4>Links</h4>
+<a href='http://my.clemson.edu/#/directory' target='_blank'>Clemson Phonebook</a><br />
+<input type='text' id='clemName'/> <button type="button" onclick="window.open( 'http://my.clemson.edu/#/directory/search/'+getElementById('clemName').value,'_blank')">Clemson Lookup</button>
+
+<!-- window.location = 'http://
+ document.location.href = "report.html" -->
+
+ 
 <h4>Tags</h4>
 eHHS:pal<br />
 <pre>
