--- a/index.htm
+++ b/index.htm
@@ -104,7 +104,7 @@
     <footer class="main-footer">
 		<a href='localhost/todo'>Tasks</a>
 		<a href='localhost/books/admin'>Library</a>
-		<a href='localhost/kb/oracle.php?app=quotes'>Library</a>
+		<a href='localhost/kb/oracle.php?app=quotes'>Quotes</a>
 	</footer>
 
     <!-- Control Sidebar -->
