--- a/modules/tags.htm
+++ b/modules/tags.htm
@@ -1,16 +1,46 @@
 <h4>Tags</h4>
-eHHS:pal<br />
+eHHS<br />
 <pre>
-a associate
-c company
-e education
-n neighborhood
-o organization;professional
-r relatives;family
-:term
-:emp
-:cust
-:vend
-:lead
-:pal
+a Associate; Amigo
+c Client; Customer
+e Employee
+n Neighbor
+o Organization;professional
+r Relative;family
+v Vendor; supplier
+w netWork
+</pre>
+<table>
+<tr>
+<td><pre>
+eEK
+eORM
+eVIN
+eHMC
+eOF
+ePB
+</pre></td>
+<td><pre>
+uHHS
+uRPI
+oNXT
+</pre></td>
+<td><pre>
+nPLW
+nBRW
+nFOX
+nWAR
+</pre></td>
+<td><pre>
+rMIN
+rBAR
+rCLE
+rDiG
+</pre></td></tr>
+</table>
+<pre>
+aDAD - Doug Dorans
+aELM - Erika
+aBMM - Brandon
+aWBH - William Haynes
 </pre>
