--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
-    <!-- Admin LTE -->
+    <!-- Admin LTE adminlte.io/docs (requires bootstrap and jQuery) -->
     <link rel="stylesheet" href="css/admin-lte-skins.css"/>
     <link rel="stylesheet" href="css/admin-lte.css"/>
     <link rel="stylesheet" href="css/core.css"/>
@@ -123,7 +123,7 @@
     <script src="plugins/slimscroll.min.js"></script>
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Admin LTE -->
+    <!-- Admin LTE v2.3.7 adminlte.io/docs -->
     <script src="plugins/admin_lte.js"></script>
     <!-- AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
