ccs styling, menu reorg

--- a/index.htm
+++ b/index.htm
@@ -80,12 +80,23 @@
                         <li><a href='#!/results/recent-adds'><i class="fa fa-users"></i> Recent Adds</a></li>
                         <li><a href='#!/results/favorites'><i class="fa fa-star"></i> Favorites</a></li>
 						<li><a href='#!/results/recent-mods'><i class="fa fa-users"></i> Recent Mods</a></li>
-                        <li><a href='#!/tags'><i class='fa fa-tag'></i> Tag</a></li>
                     </ul>
                 </li>
+
+                <li class='treeview active'>
+                    <a href=''><i class='fa fa-gear'></i> Tools
+                        <span class='pull-right-container'>
+                            <i class='fa fa-angle-left pull-right'></i>
+                        </span>
+                    </a>
+                    <ul class='treeview-menu'>
+						<li><a href='#!/tools'><i class="fa fa-cog"></i> Utilities</a></li>
+                        <li><a href='#!/tags'><i class='fa fa-tag'></i> Tag</a></li>
+						<li><a href='#!/import'><i class='fa fa-download'></i> Import</a></li>
+                    </ul>
+                </li>
+
                 <li><a href='#!/events'><i class="fa fa-tasks"></i> Events</a></li>
-                <li><a href='#!/tools'><i class="fa fa-cog"></i> Tools</a></li>
-                <li><a href='#!/import'><i class='fa fa-download'></i> Import</a></li>
                 <li><a href='#!/about'><i class='fa fa-info'></i> About</a></li>
                 <li><a href='#!/login'><i class='fa fa-lock'></i> Login/Logout</a></li>
             </ul>
@@ -101,10 +112,10 @@
     </div>
 
     <!-- Main Footer -->
-    <footer class="main-footer">
-		<a href='localhost/todo'>Tasks</a>
-		<a href='localhost/books/admin'>Library</a>
-		<a href='localhost/kb/oracle.php?app=quotes'>Quotes</a>
+    <footer class="main-footer"> &nbsp;
+		<a href='../../todo' target='_blank'>Tasks</a> &bull;
+		<a href='../../books/admin' target='_blank'>Library</a> &bull;
+		<a href='../../kb/oracle.php?app=quotes' target='_blank'>Quotes</a>
 	</footer>
 
     <!-- Control Sidebar -->
