--- a/modules/detail/detail.htm
+++ b/modules/detail/detail.htm
@@ -25,15 +25,16 @@
 
 
 <ul class='pinfo-list' ng-if='groups'>
-    <li ng-repeat="group in groups  ">
-		<div title='{{group.mdate}}'><b>{{group.type}}: {{group.org}}</b><span ng-if='group.cnt > 1'> ({{group.cnt}})</span></div>
-		<div ng-if='group.relation'><b>title</b>: {{group.relation}}</div>
+    <li ng-repeat="group in groups | orderBy: '-mdate' ">
+		<div class='mg-section' title='{{group.mdate}}'><b class='mg-title'>{{group.type}}:</b> {{group.org}}
+			<span ng-if='group.cnt > 1'> ({{group.cnt}})</span></div>
+		<div ng-if='group.relation && group.relation != "h"'><b>title</b>: {{group.relation}}</div>
 		<div ng-if='group.street'>{{group.street}}</div>
 
-		<div ng-if='group.state'>
+		<div ng-if='group.state'>{{group.city}}, {{group.state}} {{group.zip}} {{group.country}}
 		<a href='http://www.google.com/maps/place/{{group.street}} {{group.city}} {{group.state}} {{group.zip}} {{group.country}}' target='_blank'>
 		<img src='pix/map-pin.png' alt='map' title='map location'/></a>
-		{{group.city}}, {{group.state}} {{group.zip}} {{group.country}}</div>
+		</div>
 
 		<pinfo details='group.details'></pinfo>
     </li>
@@ -41,6 +42,6 @@
 
 <ul class='pinfo-list' ng-if='notes'>
     <li ng-repeat="note in notes | orderBy: '-mdate' ">
-        <div style='white-space: pre-line'><b>{{note.mdate}}</b>: {{note.note}}</div>
+        <div style='white-space: pre-line'><b class='mg-title'>{{note.mdate}}:</b> {{note.note}}</div>
     </li>
 </ul>
