--- a/modules/events/events.htm
+++ b/modules/events/events.htm
@@ -2,12 +2,14 @@
     <div class='input-group'>
         <input type='text' class='form-control' placeholder='Filter' ng-model='searchText'>
         <div class="input-group-addon">
-            <span ng-show='results'>{{(results | filterBy: ['fname', 'lname']: searchText).length}}/{{results.length}}</span>
+            <span ng-show='events'>{{(events | filterBy: ['fname', 'lname', 'event']: searchText).length}}/{{events.length}}</span>
         </div>
     </div>
 </div>
+
 <ul class='media-list'>
     <li class='media' ng-repeat="event in events | filterBy: ['fname', 'lname', 'event']: searchText">
+		<hr ng-if='dateline(event.event)' style='border-color: blue; border-width: 4px;' />
 		<div class='media-left'>
             <a ng-href='#!/detail/{{event.pid}}'>
                 <contact-image contact='event' size='thumb'></contact-image>
