--- a/index.htm
+++ b/index.htm
@@ -61,14 +61,17 @@
                 <!-- Here is where the 2 way binding is done -->
                 <!-- The ng-model directive will keep both the view value and the controller variable in sync -->
                 <!-- When one changes, the other will be updated to match -->
-                <select class="form-control" ng-model="searchABCD.type">
-                    <option value="">-- Search Types --</option>
-                    <option value="Search Type 1 Text">Search Type 1 Text</option>
-                    <option value="Search Type 2 Text">Search Type 2 Text</option>
-                    <option value="Search Type 3 Text">Search Type 3 Text</option>
+                <select class="form-control" ng-model="searchDB">
+                    <option value=''>-- Search database --</option>
+                    <option value='Contacts'>Contacts</option>
+                    <option value='Quotes'>Quotes</option>
+                    <option value='Accounts'>Accounts</option>
+                    <option value='Books'>Books</option>
+                    <option value='Countries'>Countries</option>
+                    <option value='States'>States</option>
                 </select>
 
-                <div class="input-group">
+                <div class="input-group" style='margin-top:5px'>
                     <input type="text" class="form-control" ng-class="{'searchError': nc.customSearchError}" ng-change="nc.customSearchError=false" placeholder="Search..." spellcheck="false" ng-model="customSearchCriteria" title='note: org: rel[ation]: info: ginfo: email: url: last: first: ph: sp[ouse]: st[ate]: city: tag: str[eet]:'/>
                     <span class="input-group-btn">
                         <button type="submit" name="search" id="search-btn" class="btn btn-flat" onclick="return false;" ng-click="customSearch()">
@@ -170,6 +173,7 @@
     <script src="modules/results/resultsController.js"></script>
     <script src="modules/detail/detailController.js"></script>
     <script src="modules/events/eventsController.js"></script>
+    <script src="modules/otherDBs/statesController.js"></script>
 
     <!-- Angular Main Module -->
     <script src="meshApp.js"></script>
